--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
+    "readme-md-generator": "^1.0.0",
     "sanitize-html": "^2.3.2"
   }
 }
